# get-size2

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: ci.yml
crates/get-size-derive2/: Cargo.toml  README.md
crates/get-size-derive2/src/: lib.md  lib.rs
crates/get-size2/: Cargo.toml  README.md
crates/get-size2/examples/: aaa.rs  derive_enum.rs  derive_generics.rs  derive_struct.rs  fixed_values.rs  helper_functions.rs  ignore_certain_values.rs  ignore_generics.rs  ownership_based_accounting.rs
crates/get-size2/src/: lib.md  lib.rs  test.rs  tracker.rs
examples/: derive_enum.rs  derive_generics.rs  derive_struct.rs  fixed_values.rs  helper_functions.rs  ignore_certain_values.rs  ignore_generics.rs  ownership_based_accounting.rs
get-size-derive/: Cargo.toml
get-size-derive/src/: lib.md  lib.rs
get-size-derive2/: Cargo.toml  README.md
get-size-derive2/src/: lib.md  lib.rs
get-size2/: Cargo.toml  README.md
get-size2/examples/: ignore_certain_values.rs  ignore_generics.rs  ownership_based_accounting.rs
get-size2/src/: lib.md  lib.rs  tracker.rs
get-size2/tests/: mod.rs
scripts/: release_version.ps1  release_version.sh
src/: tracker.rs
