[workspace]
resolver = "2"
members = ["crates/get-size2", "crates/get-size-derive2"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.3"
authors = ["Denis Kerp", "Nicolas"]

[workspace.dependencies]
get-size-derive2 = { version = "0.1.3", path = "crates/get-size-derive2" }
syn = "2"
quote = "1"
attribute-derive = "0.10.3"

[workspace.lints.rust]
unsafe_code = "forbid"
deprecated = "warn"

[workspace.lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
needless_doctest_main = { level = "allow", priority = 1 }
implicit_hasher = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
