[package]
name = "get-size-derive2"
description = "Derives the GetSize trait."
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Denis Kerp", "Nicolas"]
readme = "README.md"
repository = "https://github.com/bircni/get-size2/tree/main/get-size-derive2"
keywords = ["size", "heap", "ram", "memory", "get-size"]
categories = ["memory-management", "caching"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["derive", "parsing"] }
quote = "1"
attribute-derive = "0.10.1"

[dev-dependencies]
get-size2 = { path = "../get-size2", features = ["derive"] }

[lints]
workspace = true
