[package]
name = "get-size"
description = "Determine the size in bytes an object occupies inside RAM."
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Denis Kerp"]
readme = "README.md"
repository = "https://github.com/DKerp/get-size"
keywords = ["size", "heap", "ram", "cache", "memory"]
categories = ["memory-management", "caching"]

[lints]
workspace = true

[dependencies]
get-size-derive2 = { workspace = true, optional = true }

[dev-dependencies]
get-size = { path = ".", features = ["derive"] }

[features]
default = []
derive = ["get-size-derive2"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Examples:

#[[example]]
#name = "derive_enum"
#path = "examples/derive_enum.rs"
#doc = false
#
#[[example]]
#name = "derive_generic"
#path = "examples/derive_generic.rs"
#doc = false
#
#[[example]]
#name = "derive_generic_enum"
#path = "examples/derive_generic_enum.rs"
#doc = false
#
#[[example]]
#name = "derive_generics"
#path = "examples/derive_generics.rs"
#doc = false
#
#[[example]]
#name = "derive_struct"
#path = "examples/derive_struct.rs"
#doc = false
#
#[[example]]
#name = "fixed_values"
#path = "examples/fixed_values.rs"
#doc = false
#
#[[example]]
#name = "helper_functions"
#path = "examples/helper_functions.rs"
#doc = false
#
#[[example]]
#name = "ignore_certain_values"
#path = "examples/ignore_certain_values.rs"
#doc = false
#
#[[example]]
#name = "ignore_generics"
#path = "examples/ignore_generics.rs"
#doc = false
#
#[[example]]
#name = "ownership_based_accounting"
#path = "examples/ownership_based_accounting.rs"
#doc = false
#
