[package]
name = "get-size-derive2"
description = "Derives the GetSize trait."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
repository = "https://github.com/bircni/get-size2/tree/main/crates/get-size-derive2"
keywords = ["size", "heap", "ram", "memory", "get-size"]
categories = ["memory-management", "caching"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["derive", "parsing"] }
quote.workspace = true
attribute-derive.workspace = true

[dev-dependencies]
get-size2 = { path = "../get-size2", features = ["derive"] }

[lints]
workspace = true
