[package]
name = "get-size2"
description = "Determine the size in bytes an object occupies inside RAM."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
repository = "https://github.com/bircni/get-size2"
keywords = ["size", "heap", "ram", "memory", "get-size"]
categories = ["memory-management", "caching"]
exclude = ["examples/*"]

[lints]
workspace = true

[dependencies]
get-size-derive2 = { workspace = true, optional = true }

bytes = { version = "1", default-features = false, optional = true }
chrono = { version = "0.4", default-features = false, optional = true }
chrono-tz = { version = "0.10", default-features = false, optional = true }
url = { version = "2", default-features = false, optional = true }
smallvec = { version = "1", default-features = false, optional = true }

[dev-dependencies]
get-size2 = { path = ".", features = ["bytes", "derive", "chrono", "chrono-tz", "smallvec", "url"] }

[features]
default = []
bytes = ["dep:bytes"]
derive = ["get-size-derive2"]
chrono = ["dep:chrono"]
chrono-tz = ["dep:chrono-tz"]
url = ["dep:url"]
smallvec = ["dep:smallvec"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
